--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Creation World
     </h4>
     <fieldset>
-        <form action="">\
+        <form action="https://www.google.co.in/">
             <label for="">First Name</label>
             <input type="text"> <br>
             <label for="">Last Name</label>
