--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         Creation World
     </h4>
     <fieldset>
-        <form action="https://www.google.co.in/">
+        <form action="/server">
             <label for="">First Name</label>
-            <input type="text"> <br>
-            <label for="">Last Name</label>
-            <input type="text"> <br>
+            <input type="text" name="username"> <br>
+            <label for="">Password</label>
+            <input type="text" name="password"> <br>
             <button>Submit</button>
         </form>
     </fieldset>
